--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "packages/isometric-city"]
 	path = packages/isometric-city
-	url = git@github.com:amilich/isometric-city.git
+	url = git@github.com:BellaMENG/isometric-city.git
